cmake_minimum_required(VERSION 3.10)
project(AlgorithmDesign_coding)

set(CMAKE_CXX_STANDARD 11)

add_executable(AlgorithmDesign_coding main.cpp Chapter1/LinearSearch.cpp Chapter1/LinearSearch.h Chapter1/BinSearch.cpp Chapter1/BinSearch.h Chapter1/MeageList.cpp Chapter1/MeageList.h Chapter1/SelectedSort.cpp Chapter1/SelectedSort.h Chapter1/InsertionSort.cpp Chapter1/InsertionSort.h)